{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 300,
  "lineage": "27b22c67-000d-4b3c-1aa1-b6006e2008d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fortiweb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0607a49cdd0573d9c",
            "arn": "arn:aws:ec2:us-east-1:703381894397:instance/i-0c98edd4884753e9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-0837d2f5136f3d3e1",
                "throughput": 0,
                "volume_id": "vol-03e4953575e2310a4",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fweb_s3_profile",
            "id": "i-0c98edd4884753e9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "key_name": "sallamAWS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6c78cfd2afb8b84",
            "private_dns": "ip-10-0-1-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "public_ip": "3.89.50.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3fcc465126f662b",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02bb14d4d0f335a18"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a61b6982449a16b4",
            "tags": {
              "Name": "sallam-test-fweb"
            },
            "tags_all": {
              "Name": "sallam-test-fweb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02bb14d4d0f335a18"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.fweb_s3_profile",
            "aws_iam_role.fweb_s3",
            "aws_s3_bucket.fweb",
            "aws_s3_bucket_object.fweb1-cli",
            "aws_s3_bucket_object.fweb1-license",
            "aws_security_group.fwebsg",
            "aws_subnet.public1_subnet",
            "aws_vpc.main",
            "data.aws_ami.fortiweb_byol",
            "data.template_file.fweb1_cli",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fortiweb_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0607a49cdd0573d9c",
            "arn": "arn:aws:ec2:us-east-1:703381894397:instance/i-0cec78eae28a0e910",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-0837d2f5136f3d3e1",
                "throughput": 0,
                "volume_id": "vol-041718b04bc6f8830",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fweb_s3_profile",
            "id": "i-0cec78eae28a0e910",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "key_name": "sallamAWS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e1b304f3f04696a",
            "private_dns": "ip-10-0-10-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.128",
            "public_ip": "44.200.71.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d5ad82b8577d4bbe",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02bb14d4d0f335a18"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8871bfc7d20a9be",
            "tags": {
              "Name": "sallam-test-fweb"
            },
            "tags_all": {
              "Name": "sallam-test-fweb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02bb14d4d0f335a18"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.fweb_s3_profile",
            "aws_iam_role.fweb_s3",
            "aws_s3_bucket.fweb",
            "aws_s3_bucket_object.fweb2-cli",
            "aws_s3_bucket_object.fweb2-license",
            "aws_security_group.fwebsg",
            "aws_subnet.public2_subnet",
            "aws_vpc.main",
            "data.aws_ami.fortiweb_byol",
            "data.template_file.fweb2_cli",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:internet-gateway/igw-061a74a978f574bc6",
            "id": "igw-061a74a978f574bc6",
            "owner_id": "703381894397",
            "vpc_id": "vpc-0f14a2d2bb9dbcc35"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:703381894397:loadbalancer/net/test-lb-tf/d49cc4e214ca593c",
            "arn_suffix": "net/test-lb-tf/d49cc4e214ca593c",
            "dns_name": "test-lb-tf-d49cc4e214ca593c.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:703381894397:loadbalancer/net/test-lb-tf/d49cc4e214ca593c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "test-lb-tf",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a61b6982449a16b4"
              },
              {
                "subnet_id": "subnet-0d8871bfc7d20a9be"
              }
            ],
            "subnets": [
              "subnet-0a61b6982449a16b4",
              "subnet-0d8871bfc7d20a9be"
            ],
            "vpc_id": "vpc-0f14a2d2bb9dbcc35",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.public1_subnet",
            "aws_subnet.public2_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:703381894397:listener/net/test-lb-tf/d49cc4e214ca593c/d2ac0c62961d4de5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:703381894397:targetgroup/tf-example-lb-tg/75e14e72b9a332f6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:703381894397:listener/net/test-lb-tf/d49cc4e214ca593c/d2ac0c62961d4de5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:703381894397:loadbalancer/net/test-lb-tf/d49cc4e214ca593c",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public_nlb",
            "aws_lb_target_group.fweb_target",
            "aws_subnet.public1_subnet",
            "aws_subnet.public2_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fweb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:703381894397:targetgroup/tf-example-lb-tg/75e14e72b9a332f6",
            "arn_suffix": "targetgroup/tf-example-lb-tg/75e14e72b9a332f6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:703381894397:targetgroup/tf-example-lb-tg/75e14e72b9a332f6",
            "lambda_multi_value_headers_enabled": false,
            "name": "tf-example-lb-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f14a2d2bb9dbcc35"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fweb1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:703381894397:targetgroup/tf-example-lb-tg/75e14e72b9a332f6-20220909200122537700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:703381894397:targetgroup/tf-example-lb-tg/75e14e72b9a332f6",
            "target_id": "i-0c98edd4884753e9b"
          },
          "dependencies": [
            "aws_iam_instance_profile.fweb_s3_profile",
            "aws_iam_role.fweb_s3",
            "aws_instance.fortiweb_1",
            "aws_lb_target_group.fweb_target",
            "aws_s3_bucket.fweb",
            "aws_s3_bucket_object.fweb1-cli",
            "aws_s3_bucket_object.fweb1-license",
            "aws_security_group.fwebsg",
            "aws_subnet.public1_subnet",
            "aws_vpc.main",
            "data.aws_ami.fortiweb_byol",
            "data.template_file.fweb1_cli",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fweb2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:703381894397:targetgroup/tf-example-lb-tg/75e14e72b9a332f6-20220909200124229600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:703381894397:targetgroup/tf-example-lb-tg/75e14e72b9a332f6",
            "target_id": "i-0cec78eae28a0e910"
          },
          "dependencies": [
            "aws_iam_instance_profile.fweb_s3_profile",
            "aws_iam_role.fweb_s3",
            "aws_instance.fortiweb_2",
            "aws_lb_target_group.fweb_target",
            "aws_s3_bucket.fweb",
            "aws_s3_bucket_object.fweb2-cli",
            "aws_s3_bucket_object.fweb2-license",
            "aws_security_group.fwebsg",
            "aws_subnet.public2_subnet",
            "aws_vpc.main",
            "data.aws_ami.fortiweb_byol",
            "data.template_file.fweb2_cli",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a3e7610f60cc514",
            "original_route_table_id": "rtb-01ad8f4ab0497699b",
            "route_table_id": "rtb-03e66819bf98dd605",
            "vpc_id": "vpc-0f14a2d2bb9dbcc35"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fweb1_eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:network-interface/eni-0f85f44ebbcfce58f",
            "attachment": [
              {
                "attachment_id": "eni-attach-039e99dd8dce3fb4d",
                "device_index": 1,
                "instance": "i-0c98edd4884753e9b"
              }
            ],
            "id": "eni-0f85f44ebbcfce58f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:dc:dd:a3:1e:6b",
            "owner_id": "703381894397",
            "private_ip": "10.0.2.11",
            "private_ip_list": [
              "10.0.2.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a9817d05b3c06978"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5280d3c0a0219d4"
          },
          "dependencies": [
            "aws_iam_instance_profile.fweb_s3_profile",
            "aws_iam_role.fweb_s3",
            "aws_instance.fortiweb_1",
            "aws_s3_bucket.fweb",
            "aws_s3_bucket_object.fweb1-cli",
            "aws_s3_bucket_object.fweb1-license",
            "aws_security_group.fwebsg",
            "aws_subnet.private1_subnet",
            "aws_subnet.public1_subnet",
            "aws_vpc.main",
            "data.aws_ami.fortiweb_byol",
            "data.template_file.fweb1_cli",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fweb2_eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:network-interface/eni-094b716905c9ce4a5",
            "attachment": [
              {
                "attachment_id": "eni-attach-045420f1db20565f3",
                "device_index": 1,
                "instance": "i-0cec78eae28a0e910"
              }
            ],
            "id": "eni-094b716905c9ce4a5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ab:d9:3e:21:2d",
            "owner_id": "703381894397",
            "private_ip": "10.0.20.11",
            "private_ip_list": [
              "10.0.20.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.20.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a9817d05b3c06978"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d809f378b502d6c"
          },
          "dependencies": [
            "aws_iam_instance_profile.fweb_s3_profile",
            "aws_iam_role.fweb_s3",
            "aws_instance.fortiweb_2",
            "aws_s3_bucket.fweb",
            "aws_s3_bucket_object.fweb2-cli",
            "aws_s3_bucket_object.fweb2-license",
            "aws_security_group.fwebsg",
            "aws_subnet.private2_subnet",
            "aws_subnet.public2_subnet",
            "aws_vpc.main",
            "data.aws_ami.fortiweb_byol",
            "data.template_file.fweb2_cli",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-061a74a978f574bc6",
            "id": "r-rtb-03e66819bf98dd6051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e66819bf98dd605",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:route-table/rtb-03e66819bf98dd605",
            "id": "rtb-03e66819bf98dd605",
            "owner_id": "703381894397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061a74a978f574bc6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f14a2d2bb9dbcc35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fwebsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:security-group/sg-02bb14d4d0f335a18",
            "description": "Allow required ports to the ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bb14d4d0f335a18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sallam-test-Hym3T",
            "name_prefix": "",
            "owner_id": "703381894397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "sallam-test-SG"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sallam-test-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f14a2d2bb9dbcc35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:subnet/subnet-0a5280d3c0a0219d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5280d3c0a0219d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703381894397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f14a2d2bb9dbcc35"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:subnet/subnet-00d809f378b502d6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d809f378b502d6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703381894397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f14a2d2bb9dbcc35"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:subnet/subnet-0a61b6982449a16b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a61b6982449a16b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703381894397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f14a2d2bb9dbcc35"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:subnet/subnet-0d8871bfc7d20a9be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8871bfc7d20a9be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703381894397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f14a2d2bb9dbcc35"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703381894397:vpc/vpc-0f14a2d2bb9dbcc35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e99fe1fddf34c262",
            "default_route_table_id": "rtb-01ad8f4ab0497699b",
            "default_security_group_id": "sg-0a9817d05b3c06978",
            "dhcp_options_id": "dopt-22d7d658",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f14a2d2bb9dbcc35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ad8f4ab0497699b",
            "owner_id": "703381894397"
          }
        }
      ]
    }
  ]
}